# MaxBF

./: .clang-format  .gitmodules  CMakeLists.txt  DOCUMENTATION.md  README.md  maxbf.c  minunit.h  test_maxbf.c
.github/workflows/: cmake.yml
